tests/errors/lib.core.unstack.StackUnderflow.res
>> Runtime | File: lib.core.unstack.StackUnderflow.art
     error | Line: 2
           | 
           | unsafe operation: Pop non-existent stack item causes Stack Underflow.
           | not permitted in online playground
